test/Fail/Issue3892.err
Issue3892.agda:4.1-15: error: [ClashingDefinition]
Multiple definitions of Foo. Previous definition at
Issue3892.agda:3.11-14
when scope checking the declaration
  data Foo where
